fix: resolve page layout issue

--- a/login.css
+++ b/login.css
@@ -3,27 +3,30 @@
     font-size: 24px;
     margin-top: 20px;
   }
+
+  .container {
+    min-height: 80vh;
+  }
+
   .login_box {
     width: 90%;
     padding: 20px;
     gap: 10px;
   }
+
   .click_here {
     font-size: 24px;
   }
+
   .input_email,
   .input_password {
     margin: 0 10px;
   }
+
   .login_button {
     margin: 10px 10px;
     font-size: 16px;
     padding: 8px;
-  }
-   footer {
-    position: static; 
-    padding: 8px 0;
-    margin-top: 20px;
   }
 
   footer h3 {
@@ -32,29 +35,27 @@
 }
 
 @media (max-width: 1040px) {
-   footer {
-    position: static; 
-    padding: 8px 0;
-    margin-top: 20px;
+  .container {
+    min-height: 80vh;
   }
 
   footer h3 {
     font-size: 12px;
   }
 }
-
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: poppins, sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 body {
-  /* height: 100vh;
-    width: 100vw; */
-  background-image: url("./bg.jpg");
+  min-height: 100vh;
+  background-image: url("./background_image.jpg");
   background-repeat: no-repeat;
+  background-position-x: center;
+  background-position-y: center;
   background-size: cover;
 }
 
@@ -63,6 +64,7 @@ header h1 {
   font-family: cursive;
   text-align: center;
   margin-top: 40px;
+  color: #fff;
 }
 
 header h1 span {
@@ -70,12 +72,13 @@ header h1 span {
 }
 
 .container {
-  height: 70vh;
+  min-height: 70vh;
   display: flex;
   align-items: center;
   justify-content: center;
   padding: 20px;
 }
+
 .login_box {
   width: 380px;
   max-width: 100%;
@@ -85,7 +88,6 @@ header h1 span {
   backdrop-filter: blur(10px);
   text-align: center;
   color: #fff;
-  justify-content: center;
   display: flex;
   flex-direction: column;
   gap: 15px;
@@ -106,7 +108,7 @@ header h1 span {
   align-items: center;
   background: #fff;
   border-radius: 4px;
-  padding: 5px 10px;
+  padding: 6px 10px;
   margin: 0 40px;
 }
 
@@ -121,7 +123,6 @@ header h1 span {
   height: 30px;
   border: none;
   outline: none;
-
   padding-left: 5px;
   font-size: 14px;
 }
@@ -136,16 +137,17 @@ header h1 span {
   border: none;
 }
 
+.login_button:hover {
+  opacity: 0.9;
+}
+
 footer {
-  position: fixed;
-  bottom: 5px;
   width: 100%;
+  margin-top: 20px;
 }
 
 footer h3 {
   text-align: center;
+  font-size: 14px;
+  color: black;
 }
-
-
-
-
